Rename docker tag

--- a/.github/workflows/release-docker.yml
+++ b/.github/workflows/release-docker.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  publish-amd64:
+  publish-x86:
     if: github.repository == 'sgl-project/sglang'
     environment: 'prod'
     strategy:
