--- a/.github/workflows/release-docker-dev.yml
+++ b/.github/workflows/release-docker-dev.yml
@@ -83,7 +83,7 @@ jobs:
       - name: Build and Push Blackwell Image (x86)
         run: |
           if [ "${{ matrix.variant.version }}" = "12.9.1" ]; then
-            docker buildx build --platform linux/amd64 --push -f docker/Dockerfile --build-arg CUDA_VERSION=${{ matrix.variant.version }} --build-arg BUILD_TYPE=${{ matrix.variant.type }} --build-arg CMAKE_BUILD_PARALLEL_LEVEL=$(nproc) -t lmsysorg/sglang:${{ matrix.variant.tag }}-amd64 --no-cache .
+            docker buildx build --platform linux/amd64 --push -f docker/Dockerfile --build-arg CUDA_VERSION=${{ matrix.variant.version }} --build-arg BUILD_TYPE=${{ matrix.variant.type }} --build-arg CMAKE_BUILD_PARALLEL_LEVEL=$(nproc) -t lmsysorg/sglang:${{ matrix.variant.tag }}-x86 --no-cache .
           else
             docker buildx build --platform linux/amd64 --push -f docker/Dockerfile --build-arg CUDA_VERSION=${{ matrix.variant.version }} --build-arg BUILD_TYPE=${{ matrix.variant.type }} --build-arg CMAKE_BUILD_PARALLEL_LEVEL=$(nproc) -t lmsysorg/sglang:${{ matrix.variant.tag }} --no-cache .
           fi
@@ -134,7 +134,7 @@ jobs:
       matrix:
         variant:
           - tag: blackwell-cu129
-            amd64_tag: blackwell-cu129-amd64
+            x86_tag: blackwell-cu129-x86
             arm64_tag: blackwell-cu129-arm64
     steps:
       - uses: docker/setup-buildx-action@v3
@@ -145,5 +145,5 @@ jobs:
       - run: |
           docker buildx imagetools create \
             -t lmsysorg/sglang:${{ matrix.variant.tag }} \
-            lmsysorg/sglang:${{ matrix.variant.amd64_tag }} \
+            lmsysorg/sglang:${{ matrix.variant.x86_tag }} \
             lmsysorg/sglang:${{ matrix.variant.arm64_tag }}
