--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -395,7 +395,7 @@ setopt HIST_FIND_NO_DUPS
 setopt INC_APPEND_HISTORY
 EOF
 
-RUN set -euxo pipefail ; \
+RUN set -euxo ; \
     curl --proto '=https' --tlsv1.2 -sSf https://just.systems/install.sh | bash -s -- --to /usr/local/bin
 
 # Set workspace directory
