--- a/sgl-kernel/CMakeLists.txt
+++ b/sgl-kernel/CMakeLists.txt
@@ -188,6 +188,7 @@ endif()
 if (ENABLE_BELOW_SM90)
     list(APPEND SGL_KERNEL_CUDA_FLAGS
         "-gencode=arch=compute_80,code=sm_80"
+        "-gencode=arch=compute_87,code=sm_87"
         "-gencode=arch=compute_89,code=sm_89"
     )
 endif()
