--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -39,7 +39,7 @@ jobs:
           cd sgl-router/
           cargo fmt -- --check
 
-      - name: Run test
+      - name: Run Rust tests
         timeout-minutes: 20
         run: |
           source "$HOME/.cargo/env"
@@ -59,6 +59,12 @@ jobs:
           cd sgl-router/
           # Run quick benchmarks to ensure they work using Python script
           python3 scripts/run_benchmarks.py --quick
+
+      - name: Run Python unit tests
+        run: |
+          cd sgl-router
+          pip install pytest pytest-cov
+          PYTHONPATH=py_src python3 -m pytest py_test/unit/ --cov=sglang_router.launch_router --cov-fail-under=80
 
   e2e-python:
     if: github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request'
