fix the coverage target

--- a/sgl-router/pytest.ini
+++ b/sgl-router/pytest.ini
@@ -1,5 +1,15 @@
-[tool:pytest]
+[pytest]
 testpaths = py_test
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
+addopts = --cov=sglang_router --cov-report=term-missing --cov-fail-under=80
+
+[tool:coverage:run]
+source = py_src/sglang_router
+omit =
+    */router.py
+    */launch_server.py
+
+[tool:coverage:report]
+fail_under = 80
