--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -39,21 +39,19 @@ jobs:
           cd sgl-router/
           cargo fmt -- --check
 
+      - name: Run Python unit tests
+        run: |
+          cd sgl-router
+          source "$HOME/.cargo/env"
+          pip install -e .[test]
+          pytest -q py_test/unit
+
       - name: Run Rust tests
         timeout-minutes: 20
         run: |
           source "$HOME/.cargo/env"
           cd sgl-router/
           cargo test
-
-      - name: Run Python unit tests
-        run: |
-          cd sgl-router
-          # Build Rust module for Python unit tests (compile only, no optimization)
-          source "$HOME/.cargo/env"
-          cargo test --no-run
-          pip install pytest pytest-cov
-          PYTHONPATH=py_src python3 -m pytest py_test/unit/ --cov=sglang_router.launch_router --cov-fail-under=80
 
       - name: Check benchmark compilation
         run: |
