fix the test lib

--- a/sgl-router/pyproject.toml
+++ b/sgl-router/pyproject.toml
@@ -27,6 +27,8 @@ test = [
     "pytest-timeout>=2.0.0",
     "pytest-mock>=3.10.0",
     "coverage[toml]>=7.0.0",
+    "setproctitle>=1.2.0",
+    "requests>=2.25.0",
 ]
 
 # https://github.com/PyO3/setuptools-rust?tab=readme-ov-file
