--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -88,7 +88,7 @@ jobs:
         run: |
           cd sgl-router
           source "$HOME/.cargo/env"
-          python -m pip install pytest pytest-cov pytest-xdist
+          pip install pytest pytest-cov pytest-xdist
           pytest -q py_test/unit
 
       - name: Run e2e test
