--- a/sgl-router/pytest.ini
+++ b/sgl-router/pytest.ini
@@ -5,8 +5,11 @@ python_classes = Test*
 python_functions = test_*
 addopts = --cov=sglang_router --cov-report=term-missing --cov-fail-under=80
 
-[tool:coverage:run]
+[coverage:run]
 source = py_src/sglang_router
+omit = py_src/sglang_router/mini_lb.py
 
-[tool:coverage:report]
+
+[coverage:report]
 fail_under = 80
+omit = py_src/sglang_router/mini_lb.py
