--- a/sgl-router/pytest.ini
+++ b/sgl-router/pytest.ini
@@ -3,13 +3,4 @@ testpaths = py_test
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
-addopts = --cov=sglang_router --cov-report=term-missing --cov-fail-under=80
-
-[coverage:run]
-source = py_src/sglang_router
-omit = py_src/sglang_router/mini_lb.py
-
-
-[coverage:report]
-fail_under = 80
-omit = py_src/sglang_router/mini_lb.py
+addopts = --cov=sglang_router --cov-report=term-missing
