--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -27,6 +27,11 @@ jobs:
         run: |
           bash scripts/ci/ci_install_rust.sh
 
+      - name: Rust cache
+        uses: Swatinem/rust-cache@v2
+        with:
+          workspaces: sgl-router
+
       - name: Run lint
         run: |
           source "$HOME/.cargo/env"
