--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -39,14 +39,6 @@ jobs:
           cd sgl-router/
           cargo fmt -- --check
 
-      - name: Run Python unit tests
-        run: |
-          cd sgl-router
-          source "$HOME/.cargo/env"
-          pip install -U pip wheel setuptools setuptools-rust
-          pip install --no-build-isolation .[test] --prefer-binary
-          pytest -q py_test/unit
-
       - name: Run Rust tests
         timeout-minutes: 20
         run: |
@@ -91,6 +83,14 @@ jobs:
           pip install setuptools-rust wheel build
           python3 -m build
           pip install --force-reinstall dist/*.whl
+
+
+      - name: Run Python unit tests
+        run: |
+          cd sgl-router
+          source "$HOME/.cargo/env"
+          pip install -e .[test]
+          pytest -q py_test/unit
 
       - name: Run e2e test
         run: |
