[router] add rust cache

--- a/.github/workflows/pr-benchmark-rust.yml
+++ b/.github/workflows/pr-benchmark-rust.yml
@@ -41,6 +41,10 @@ jobs:
         uses: Swatinem/rust-cache@v2
         with:
           workspaces: sgl-router
+          # Share cache across all benchmark jobs
+          shared-key: "rust-cache"
+          # Save cache even on failure
+          save-if: true
 
       - name: Check benchmarks compile
         run: |
@@ -92,6 +96,10 @@ jobs:
         uses: Swatinem/rust-cache@v2
         with:
           workspaces: sgl-router
+          # Share cache across all benchmark jobs
+          shared-key: "rust-cache"
+          # Save cache even on failure
+          save-if: true
 
       - name: Run request processing benchmark
         timeout-minutes: 30
@@ -152,6 +160,10 @@ jobs:
         uses: Swatinem/rust-cache@v2
         with:
           workspaces: sgl-router
+          # Share cache across all benchmark jobs
+          shared-key: "rust-cache"
+          # Save cache even on failure
+          save-if: true
 
       - name: Run tokenizer benchmark
         timeout-minutes: 30
@@ -211,6 +223,10 @@ jobs:
         uses: Swatinem/rust-cache@v2
         with:
           workspaces: sgl-router
+          # Share cache across all benchmark jobs
+          shared-key: "rust-cache"
+          # Save cache even on failure
+          save-if: true
 
       - name: Run tool parser benchmark
         timeout-minutes: 30
