--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -109,7 +109,7 @@ jobs:
         run: |
           bash scripts/killall_sglang.sh "nuk_gpus"
           cd sgl-router
-          pytest -q -m e2e
+          pytest -m e2e -s  -vv -o log_cli=true --log-cli-level=INFO
 
   finish:
     needs: [unit-test-rust, e2e-python]
