--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -105,11 +105,11 @@ jobs:
           pip install fastapi uvicorn orjson
           pytest -q -m integration
 
-      - name: Run e2e test
+      - name: Run Python E2E tests
         run: |
           bash scripts/killall_sglang.sh "nuk_gpus"
-          cd sgl-router/py_test
-          python3 run_suite.py
+          cd sgl-router
+          pytest -m e2e -s  -vv -o log_cli=true --log-cli-level=INFO
 
   finish:
     needs: [unit-test-rust, e2e-python]
