--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -13,23 +13,27 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: Apache Software License",
 ]
-dependencies = ["aiohttp", "requests", "tqdm", "numpy", "IPython", "setproctitle"]
-
-[project.optional-dependencies]
-runtime_common = [
+dependencies = [
+    "aiohttp",
+	"anthropic>=0.20.0",
     "blobfile==3.0.0",
     "build",
     "compressed-tensors",
+	"cuda-python",
     "datasets",
+	"decord",
     "einops",
     "fastapi",
+	"flashinfer_python==0.3.1",
     "hf_transfer",
     "huggingface_hub",
     "interegular",
+	"IPython",
     "llguidance>=0.7.11,<0.8.0",
     "modelscope",
     "msgspec",
     "ninja",
+	"numpy",
     "openai==1.99.1",
     "openai-harmony==0.0.4",
     "orjson",
@@ -44,66 +48,26 @@ runtime_common = [
     "pynvml",
     "python-multipart",
     "pyzmq>=25.1.2",
+	"requests",
+	"scipy",
     "sentencepiece",
-    "soundfile==0.13.1",
-    "scipy",
+	"setproctitle",
+	"soundfile==0.13.1",
     "timm==1.0.16",
     "tiktoken",
+	"torch==2.8.0",
     "torchao==0.9.0",
+    "torchaudio==2.8.0",
+    "torchvision",
+	"torch_memory_saver==0.0.8",
+	"tqdm",
     "transformers==4.56.0",
     "uvicorn",
     "uvloop",
     "xgrammar==0.1.23",
 ]
 
-srt = [
-    "sglang[runtime_common]",
-    "sgl-kernel==0.3.8",
-    "torch==2.8.0",
-    "torchaudio==2.8.0",
-    "torchvision",
-    "cuda-python",
-    "flashinfer_python==0.3.1",
-]
-
-blackwell = [
-    "sglang[runtime_common]",
-    "sgl-kernel",
-    "torch==2.8.0",
-    "torchaudio==2.8.0",
-    "torchvision",
-    "cuda-python",
-    "flashinfer_python==0.3.1",
-]
-
-# HIP (Heterogeneous-computing Interface for Portability) for AMD
-# => base docker rocm/vllm-dev:20250114, not from public vllm whl
-srt_hip = [
-    "sglang[runtime_common]",
-    "torch",
-    "petit_kernel==0.0.2",
-    "wave-lang==3.7.0",
-]
-
-# https://docs.sglang.ai/platforms/cpu_server.html
-srt_cpu = ["sglang[runtime_common]"]
-
-# https://docs.sglang.ai/platforms/ascend_npu.html
-srt_npu = ["sglang[runtime_common]"]
-
-# xpu is not enabled in public vllm and torch whl,
-# need to follow https://docs.vllm.ai/en/latest/getting_started/xpu-installation.htmlinstall vllm
-srt_xpu = ["sglang[runtime_common]"]
-
-# For Intel Gaudi(device : hpu) follow the installation guide
-# https://docs.vllm.ai/en/latest/getting_started/gaudi-installation.html
-srt_hpu = ["sglang[runtime_common]"]
-
-openai = ["openai==1.99.1", "tiktoken"]
-anthropic = ["anthropic>=0.20.0"]
-litellm = ["litellm>=1.0.0"]
-torch_memory_saver = ["torch_memory_saver==0.0.8"]
-decord = ["decord"]
+[project.optional-dependencies]
 test = [
     "accelerate",
     "expecttest",
@@ -115,18 +79,8 @@ test = [
     "pytest",
     "tabulate",
 ]
-all = ["sglang[srt]", "sglang[openai]", "sglang[anthropic]", "sglang[torch_memory_saver]", "sglang[decord]"]
-all_hip = ["sglang[srt_hip]", "sglang[openai]", "sglang[anthropic]", "sglang[decord]"]
-all_xpu = ["sglang[srt_xpu]", "sglang[openai]", "sglang[anthropic]", "sglang[decord]"]
-all_hpu = ["sglang[srt_hpu]", "sglang[openai]", "sglang[anthropic]", "sglang[decord]"]
-all_cpu = ["sglang[srt_cpu]", "sglang[openai]", "sglang[anthropic]", "sglang[decord]"]
-all_npu = ["sglang[srt_npu]", "sglang[openai]", "sglang[anthropic]", "sglang[decord]"]
 
-dev = ["sglang[all]", "sglang[test]"]
-dev_hip = ["sglang[all_hip]", "sglang[test]"]
-dev_xpu = ["sglang[all_xpu]", "sglang[test]"]
-dev_hpu = ["sglang[all_hpu]", "sglang[test]"]
-dev_cpu = ["sglang[all_cpu]", "sglang[test]"]
+dev = ["sglang", "sglang[test]"]
 
 [project.urls]
 "Homepage" = "https://github.com/sgl-project/sglang"
