--- a/python/pyproject_hip.toml
+++ b/python/pyproject_hip.toml
@@ -1,4 +1,5 @@
-# https://docs.sglang.ai/platforms/cpu_server.html
+# HIP (Heterogeneous-computing Interface for Portability) for AMD
+# => base docker rocm/vllm-dev:20250114, not from public vllm whl
 [build-system]
 requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
@@ -26,7 +27,6 @@ dependencies = [
     "fastapi",
     "hf_transfer",
     "huggingface_hub",
-	"intel-openmp",
     "interegular",
 	"IPython",
     "llguidance>=0.7.11,<0.8.0",
@@ -40,6 +40,7 @@ dependencies = [
     "outlines==0.1.11",
     "packaging",
     "partial_json_parser",
+	"petit_kernel==0.0.2",
     "pillow",
     "prometheus-client>=0.20.0",
     "psutil",
@@ -55,11 +56,13 @@ dependencies = [
 	"soundfile==0.13.1",
     "timm==1.0.16",
     "tiktoken",
+	"torch",
     "torchao==0.9.0",
 	"tqdm",
     "transformers==4.56.0",
     "uvicorn",
     "uvloop",
+	"wave-lang==3.7.0",
     "xgrammar==0.1.23",
 ]
 
