--- a/python/pyproject_hpu.toml
+++ b/python/pyproject_hpu.toml
@@ -1,4 +1,5 @@
-# https://docs.sglang.ai/platforms/cpu_server.html
+# For Intel Gaudi(device : hpu) follow the installation guide
+# https://docs.vllm.ai/en/latest/getting_started/gaudi-installation.html
 [build-system]
 requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
@@ -26,7 +27,6 @@ dependencies = [
     "fastapi",
     "hf_transfer",
     "huggingface_hub",
-	"intel-openmp",
     "interegular",
 	"IPython",
     "llguidance>=0.7.11,<0.8.0",
