--- a/python/pyproject_xpu.toml
+++ b/python/pyproject_xpu.toml
@@ -1,4 +1,5 @@
-# https://docs.sglang.ai/platforms/cpu_server.html
+# xpu is not enabled in public vllm and torch whl,
+# need to follow https://docs.vllm.ai/en/latest/getting_started/xpu-installation.htmlinstall vllm
 [build-system]
 requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
@@ -26,7 +27,6 @@ dependencies = [
     "fastapi",
     "hf_transfer",
     "huggingface_hub",
-	"intel-openmp",
     "interegular",
 	"IPython",
     "llguidance>=0.7.11,<0.8.0",
