--- a/docker/Dockerfile.gb200
+++ b/docker/Dockerfile.gb200
@@ -66,7 +66,8 @@ RUN python3 -m pip install --no-cache-dir --upgrade pip setuptools wheel html5li
       python3 -m pip install --no-cache-dir nvidia-nccl-cu12==2.27.6 --force-reinstall --no-deps ; \
       python3 -m pip install --no-cache-dir https://github.com/sgl-project/whl/releases/download/v${SGL_KERNEL_VERSION}/sgl_kernel-${SGL_KERNEL_VERSION}+cu129-cp310-abi3-manylinux2014_$(uname -m).whl --force-reinstall --no-deps ; \
     fi \
- && python3 -m pip install --no-cache-dir -e "python[${BUILD_TYPE}]" --extra-index-url https://download.pytorch.org/whl/cu${CUINDEX}
+ && python3 -m pip install --no-cache-dir -e "python[${BUILD_TYPE}]" --extra-index-url https://download.pytorch.org/whl/cu${CUINDEX} \
+ && python3 -m flashinfer --download-cubin
 
 # Download source files
 RUN wget https://developer.download.nvidia.com/compute/redist/nvshmem/3.3.9/source/nvshmem_src_cuda12-all-all-3.3.9.tar.gz && \
@@ -105,11 +106,6 @@ RUN python3 -m pip install --no-cache-dir \
     uv \
     wheel \
     scikit-build-core
-
-# These will be automatically installed by future versions of flashinfer after 0.2.9rc2
-RUN python3 -m pip install --no-cache-dir \
-    nvidia-cudnn-cu12 \
-    nvidia-cudnn-frontend
 
 # Install nixl kv transfer backend
 RUN python3 -m pip install --no-cache-dir \
