--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -74,6 +74,7 @@ blackwell = [
     "torchvision",
     "cuda-python",
     "flashinfer_python==0.3.1",
+    "nvidia-cutlass-dsl==4.1.0",
 ]
 
 # HIP (Heterogeneous-computing Interface for Portability) for AMD
