--- a/docker/Dockerfile.xeon
+++ b/docker/Dockerfile.xeon
@@ -31,7 +31,8 @@ ENV PIP_ROOT_USER_ACTION=ignore
 ENV CONDA_PREFIX=/sgl-workspace/miniforge3
 
 RUN pip config set global.index-url https://download.pytorch.org/whl/cpu && \
-    pip config set global.extra-index-url https://pypi.org/simple
+    pip config set global.extra-index-url https://pypi.org/simple && \
+	pip install intel-openmp
 
 RUN git clone https://github.com/sgl-project/sglang.git && \
     cd sglang && \
