--- a/.github/workflows/pr-test-amd.yml
+++ b/.github/workflows/pr-test-amd.yml
@@ -29,7 +29,7 @@ jobs:
       github.event.pull_request.draft == false
     strategy:
       matrix:
-        runner: [linux-mi300-gpu-1, linux-mi325-gpu-1, linux-mi35x-gpu-1]
+        runner: [linux-mi300-gpu-1, linux-mi325-gpu-1]
     runs-on: ${{matrix.runner}}
     steps:
       - name: Checkout code
