--- a/.github/workflows/pr-test-sgl-kernel.yml
+++ b/.github/workflows/pr-test-sgl-kernel.yml
@@ -1,22 +1,7 @@
 name: PR Test (sgl-kernel)
 
-on:
-  push:
-    branches: [main]
-    paths:
-      - "sgl-kernel/**"
-  pull_request:
-    branches: [main]
-    paths:
-      - "sgl-kernel/**"
-  workflow_dispatch:
-
-concurrency:
-  group: pr-test-sgl-kernel-${{ github.ref }}
-  cancel-in-progress: true
-
 jobs:
-  lint:
+  sgl-kernel-lint:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -30,7 +15,7 @@ jobs:
           clangFormatVersion: 18
           style: file
 
-  build-wheels:
+  sgl-kernel-build-wheels:
     if: github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request'
     runs-on: sgl-kernel-build-node
     strategy:
@@ -70,9 +55,9 @@ jobs:
           name: wheel-python${{ matrix.python-version }}-cuda${{ matrix.cuda-version }}
           path: sgl-kernel/dist/*
 
-  unit-test:
+  sgl-kernel-unit-test:
     if: github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request'
-    needs: build-wheels
+    needs: sgl-kernel-build-wheels
     runs-on: 1-gpu-runner
     steps:
       - uses: actions/checkout@v4
@@ -102,9 +87,9 @@ jobs:
         run: |
           pip3 uninstall sgl-kernel -y
 
-  mla-test:
+  sgl-kernel-mla-test:
     if: github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request'
-    needs: build-wheels
+    needs: sgl-kernel-build-wheels
     runs-on: 1-gpu-runner
     steps:
       - uses: actions/checkout@v4
@@ -134,8 +119,8 @@ jobs:
         run: |
           pip3 uninstall sgl-kernel -y
 
-  finish:
-    needs: [unit-test, mla-test, lint, build-wheels]
+  sgl-kernel-finish:
+    needs: [sgl-kernel-unit-test, sgl-kernel-mla-test, sgl-kernel-lint, sgl-kernel-build-wheels]
     runs-on: ubuntu-latest
     steps:
       - name: Check all dependent job statuses
