--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -39,6 +39,7 @@ jobs:
               - "scripts/ci/**"
               - "test/**"
               - ".github/workflows/pr-test.yml"
+              - "sgl-kernel/**"
 
   # =============================================== sgl-kernel ====================================================
 
